@@ -1,3 +1,9 @@
+2014-03-31  Karl Berry  <karl@tug.org>
+
+	* dvipdfmx.c (show_usage): avoid long lines in help msg,
+	include bug reporting address, and
+	(show_version): use printf instead of fprintf(stdout.
+
 2014-03-24  Karl Berry  <karl@tug.org>
 
 	* error.c (WARN, ERROR): use my_name, not loud stars.
